// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authenticate mainnet 1`] = `"F5gy3IHoKUNJOUEQQMHg1iTZGa4Ef3TeT+deaBKkkYFK3Aur5y3XuOL4NNygsn9lYPnPsvXUvtBiyy4+yZ6geQE="`;

exports[`authenticate mainnet BLS 1`] = `"r1QYs+G633VEW/i5EUZVMm/SqdH5fvsylvql0chOeMJAEB6jsD9NKfgeap6mVepVE+IA2iqFdqi+F0lTkRicrxvOLs7siyPXAQZPivx34oxSEdN55LNbXL6EAIE+3p4W"`;

exports[`authenticate testnet 1`] = `"APHUqaCLuyqunqfYJl8YAq3/p6oO9iiEAGkGQILzZAEMR/L28/F+iN2ismhMJCm9yr8VjIqgneiaFIkr65fimgA="`;

exports[`createLink generate proof on mainnet 1`] = `
Object {
  "account": "f1ymbkm43ysdiruibji6c6m2iy5bxwbuv5d6cdqmy@fil:f",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "1FtigSxmRbUCdjAAgotHcbq5al3vBkMCD8Fg4JhNj5siND0Orhol21/zLS52gkn19OiXUe00FukDv/KSErWD6gE=",
  "type": "eoa-tx",
  "version": 2,
}
`;

exports[`createLink generate proof on mainnet for BLS key 1`] = `
Object {
  "account": "f3vbrwhphivdxyvs3pxpp54w73664bgxmb7ed4du4ohhu3dc6f5y264cs72yluw7mjbwnlrtzq543ys57plzka@fil:f",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "qKJkFRgqlN7uZoP8lyBJgKU7mx2yRovCthnQqLkL3OdvU1c8i2Mm9pI//uEEKoR8ClnF+qALswY/BFaccnDI81jHc6LgkPCKL5mNDjcj4/0HF21poLKSFXFPlI+ErJdF",
  "type": "eoa-tx",
  "version": 2,
}
`;

exports[`createLink generate proof on testnet 1`] = `
Object {
  "account": "t17lxg2i2otnl7mmpw2ocd6o4e3b4un3272vny6ka@fil:t",
  "message": "Create a new account link to your identity.

did:3:bafysdfwefwe",
  "signature": "YpSd1/zXbw4ga2v9Vihm8/mioRhBQsDhfHKoFuuFysoW3dsKwhiusuyZgF0/F1iIpcfDWuE6WzlbkDSHdoSebAE=",
  "type": "eoa-tx",
  "version": 2,
}
`;
